# Parser

./: .coverage  .gitignore  compile.sh  coverage.xml  exec.c  parserRefid.py  run_tests.py  test.py
AIClient/: AIClient.py
CParser/: CParser  CParserClass.py  CheckType.py  CustomContainers.py  StringOperations.py  Utilities.py  Window.h  cindex.py  out
DevOps/: bintoc.sh  build_wrapper_linux.sh  build_wrapper_windows.sh  clean_repo.sh  compile.sh  environment_variables.sh  requirements.sh  setup_env.sh
Doc/: GIT_CHEATSHEET.md  HOW_TO_TEST.md  HOW_TO_WORK.md
HTMLParser/: .gitignore  JSON_example.txt  algo.py  data_parsed.txt  model.txt  parser.py  parser_correction.py  test.html  test.txt
Includes/: pythonFile.py
Parser/: aiClient.py  aiClientInterface.py  classes.py  compile.sh  genericClasses.py  genericRequestCrafter.py  getters.py  jsonClasses.py  jsonRequestCrafter.py  languageInterface.py  printingFunctions.py  strOperations.py  useful.py  wikilibs_parser.py
PyQt/: Combobox.py  Hello_world.py  endWindow.py  graphicalClient.py  inputsWindow.py  processingWindow.py  summaryWindow.py  welcomeWindow.py
Wrapper-C/: CMakeLists.txt  run.sh
Wrapper-C/Linux/: CMakeLists.txt  exec.c
Wrapper-C/Linux/code/: constant.c  constant.h  exec.c
Wrapper-C/Linux/mybins_test/: mybin.1.c  mybin.h
Wrapper-C/Windows/: CMakeLists.txt  CreatePross.cpp
Wrapper-C/Windows/code/: CreatePross.cpp  constant.cpp  constant.h
Wrapper-C/Windows/mybins/: mybin.1.c  mybin.h
Wrapper-C/Windows/mybins_test/: mybin.1.c  mybin.h
XMLParser/: Doxyfile  compile.sh  parserDoxygenXML.py  readme_vic
wwwroot/: web.config
xml/: _circle_shape_8h.xml  dir_983f03418386a76a32a9f4a7fdd2c4bd.xml  dir_c2063fa17c3fa6aee5db5167fe7a0600.xml  group__error__codes.xml  group__header__info.xml  group__stream__callbacks.xml  group__stream__decoding.xml  (+12 more)
(+179 files in other folders)
